--- a/content/firstBook_config.yml
+++ b/content/firstBook_config.yml
@@ -8,7 +8,7 @@
 title                       : MyFirstBook!!!  # The title of the book. Will be placed in the left navbar.
 author                      : Riya Deokar  # The author of the book
 copyright                   : "2023"  # Copyright year to be placed in the footer
-logo                        : firstlogo.png  # A path to the book logo
+logo                        : logo2.png  # A path to the book logo
 only_build_toc_files        : true
 
 # url should be the published url for the book
